--- a/app/src/main/res/layout/fragment_detalle_p_q_r.xml
+++ b/app/src/main/res/layout/fragment_detalle_p_q_r.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.fragments.FragmentAgregarYEditarPQR"
+    tools:context=".ui.fragments.FragmentDetallesPQR"
     >
 
 <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,7 +48,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="3dp"
-            android:text="TextView" />
+            android:text="@string/Tipo_pqr" />
 
         <TextView
             android:id="@+id/textView10"
@@ -57,7 +57,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="3dp"
-            android:text="TextView" />
+            android:text="@string/asunto" />
 
         <TextView
             android:id="@+id/textView11"
@@ -66,7 +66,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="3dp"
-            android:text="TextView" />
+            android:text="@string/fecha_creacion" />
 
         <TextView
             android:id="@+id/textView12"
@@ -75,7 +75,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="3dp"
-            android:text="TextView" />
+            android:text="@string/usuario_pqr" />
 
         <TextView
             android:id="@+id/textView13"
@@ -84,7 +84,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="3dp"
-            android:text="TextView" />
+            android:text="@string/estado" />
 
         <TextView
             android:id="@+id/textView14"
@@ -93,7 +93,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="3dp"
-            android:text="TextView" />
+            android:text="@string/fecha_limite" />
 
         <TextView
             android:id="@+id/textView15"
@@ -102,7 +102,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="3dp"
-            android:text="TextView" />
+            android:text="@string/vigencia" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
     </layout>
