--- a/app/src/main/res/layout/fragment_vista_general.xml
+++ b/app/src/main/res/layout/fragment_vista_general.xml
@@ -62,12 +62,14 @@
             android:id="@+id/reciclerpqr"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button2"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
 
