--- a/app/src/main/res/navigation/navegacion.xml
+++ b/app/src/main/res/navigation/navegacion.xml
@@ -34,6 +34,9 @@
             android:name="idPQR"
             app:argType="integer"
             android:defaultValue="-1" />
+        <action
+            android:id="@+id/action_fragmentAgregarYEditarPQR_to_fragmentLogin"
+            app:destination="@id/fragmentLogin" />
     </fragment>
     <fragment
         android:id="@+id/fragmentDetallesPQR"
@@ -47,6 +50,9 @@
             android:name="idPQR"
             app:argType="integer"
             android:defaultValue="-1" />
+        <action
+            android:id="@+id/action_fragmentDetallesPQR_to_fragmentLogin"
+            app:destination="@id/fragmentLogin" />
     </fragment>
     <fragment
         android:id="@+id/fragmentVistaGeneral"
@@ -59,5 +65,8 @@
         <action
             android:id="@+id/action_fragmentVistaGeneral_to_fragmentAgregarYEditarPQR"
             app:destination="@id/fragmentAgregarYEditarPQR" />
+        <action
+            android:id="@+id/action_fragmentVistaGeneral_to_fragmentLogin"
+            app:destination="@id/fragmentLogin" />
     </fragment>
 </navigation>
