--- a/app/src/main/res/layout/fragment_detalle_p_q_r.xml
+++ b/app/src/main/res/layout/fragment_detalle_p_q_r.xml
@@ -5,23 +5,39 @@
     tools:context=".ui.fragments.FragmentDetallesPQR"
     >
 
-<androidx.constraintlayout.widget.ConstraintLayout
+
+    <data>
+
+        <variable
+            name="fragment"
+            type="com.example.pqrs.ui.fragments.FragmentDetallesPQR" />
+
+
+        <variable
+            name="id"
+            type="Integer" />
+
+    </data>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/butEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="16dp"
         android:text="@string/editar"
+        android:onClickListener="@{(v)-> fragment.irAEditar(id)}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/butDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -36,7 +52,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/butEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
