--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -19,5 +19,19 @@
     </string-array>
 
 
+    <string-array name="estadoIfIsNew">
+        <item>NUEVO</item>
+        <item>EN_EJECUCION</item>
+    </string-array>
+
+
+    <string-array name="estadoIfIsEjecucion">
+        <item>EN_EJECUCION</item>
+        <item>CERRADO</item>
+    </string-array>
+
+    <string-array name="estadoIfIsclosed">
+        <item>CERRADO</item>
+    </string-array>
 
 </resources>
